--- a/girl/style.css
+++ b/girl/style.css
@@ -516,29 +516,31 @@ iframe{
 }
 
 #help{
-  padding-top: 2rem;
   position: relative;
   margin: 0 auto;
-  width: 800px;
-  height: 800px;
-  padding-bottom: 50px;
-  margin: 0 auto;
+  width: 93vh;
+  height: 93vh;
 
   display: none;
   z-index: 9;
 }
 
-#h_bg{
-  position: relative;
-  width: 100%;
-  height: auto;
+@media only screen and (max-width: 960px) {
+  #help{
+    height: 800px;
+    width: 800px;
+  }
 }
 
-@media only screen and (min-width: 960px) {
+@media only screen and (max-height: 900px) {
   #help{
-    height: 93vh;
-    width: 93vh;
+    height: 800px;
+    width: 800px;
   }
+}
+
+#h_bg{
+  width: 100%;
 }
 
 #help div{
@@ -559,14 +561,13 @@ iframe{
 
 #help #toha{
   padding-left: 120px;
-  margin-bottom: 8%;
+  margin-bottom: 80px;
 }
 
 #h_title{
-  position: absolute;
   width: 70px;
   left: 45%;
-  top: 23%;
+  top: 20%;
 }
 
 #h_hover{
