--- a/girl/style.css
+++ b/girl/style.css
@@ -25,9 +25,8 @@ body　div{
 }
 
 #container{
-  width: 100%;
-  max-width: 1280px;
-  min-width: 512px;
+  width: 93vh;
+  height: 93vh;
   margin: 0 auto;
   font-family: -apple-system, BlinkMacSystemFont, 'Helvetica Neue', 'Segoe UI', 'Hiragino Kaku Gothic ProN', 'Yu Gothic', sans-serif;
 }
@@ -36,8 +35,8 @@ body　div{
 #image{
   position: relative;
   margin: 0 auto;
-  width: 93vh;
-  height: 93vh;
+  width: 100%;
+  height: 100%;
 }
 
 img{
@@ -54,14 +53,14 @@ img{
 }
 
 @media only screen and (max-width: 960px) {
-  #image{
+  #container{
     height: 800px;
     width: 800px;
   }
 }
 
 @media only screen and (max-height: 900px) {
-  #image{
+  #container{
     height: 800px;
     width: 800px;
   }
@@ -80,6 +79,7 @@ img{
   position: absolute;
   background-image: url(images/ie.png);
   width: 100%;
+  min-width: 800px;
   height: 175.5px;
   background-size: 293.5px,175.5px;
   top:200px;
@@ -91,11 +91,23 @@ img{
   position: absolute;
   top:375.5px;
   width: 100%;
-  height: 100px;
+  height: 100%;
+  min-width: 800px;
+  max-height: calc(100% - 375.5px);
+  /*min-height: calc(100% - 375.5px);*/
   background-color: #fff;
 
   left: 0;
 }
+
+@media only screen and (max-height: 900px) {
+
+  #zimen{
+    min-height: 488.5px;
+
+  }
+}
+
 
 #title{
   margin-top: 0;
@@ -176,6 +188,11 @@ img{
 }
 
 #grid{
+  opacity: 0;
+  width: 100%;
+  height: 100%;
+  min-width: 800px;
+  min-height: 864px;
   position: absolute;
   background-image: url(images/grid.png);
   background-size: 55.5px,33px;
@@ -183,7 +200,12 @@ img{
 }
 
 #rain{
+  width: 100%;
+  height: 100%;
+  min-width: 800px;
+  min-height: 864px;
   position: absolute;
+
   background-size: 100px;
   left: 0px;
 }
@@ -203,19 +225,6 @@ img{
 
 #zoomout{
   right: 30px;
-}
-
-@media only screen and (min-width: 960px) {
-
-  #ie{
-    height: 210.6px;
-    background-size: 352.2px,210.6px;
-    top:240px;
-  }
-
-  #zimen{
-    top:450.6px;
-  }
 }
 
 @media only screen and (max-width: 800px) {/*////スマホ用/////*/
@@ -512,35 +521,17 @@ iframe{
 
 /*//////ヘルプ///////*/
 #container2{
-  position: absolute;
   width: 100%;
-  max-width: 1280px;
-  min-width: 512px;
-  top: 0;
 }
 
 #help{
-  position: relative;
+  position: absolute;
   margin: 0 auto;
-  width: 93vh;
-  height: 93vh;
+  width: 100%;
+  height: 100%;
 
   display: none;
   z-index: 9;
-}
-
-@media only screen and (max-width: 960px) {
-  #help{
-    height: 800px;
-    width: 800px;
-  }
-}
-
-@media only screen and (max-height: 900px) {
-  #help{
-    height: 800px;
-    width: 800px;
-  }
 }
 
 #h_bg{
