--- a/girl/style.css
+++ b/girl/style.css
@@ -37,6 +37,13 @@ body　div{
   margin: 0 auto;
   width: 100%;
   height: 100%;
+  /*transform:scale(-1,1);*/
+}
+
+#reflect{
+  width: 100%;
+  height: 100%;
+  transform:scale(-1,1);
 }
 
 img{
@@ -73,6 +80,7 @@ img{
 /*///////背景//////*/
 #house{
   width: 100%;
+  top: 0;
 }
 
 #ie{
@@ -112,8 +120,8 @@ img{
 #title{
   margin-top: 0;
   width: 13.5%;
-  top:9%;
-  left: 14%;
+  top:7%;
+  left: 10%;
 }
 
 .sora{
@@ -134,8 +142,8 @@ img{
 
 #reload{
   width: 8%;
-  top:86%;
-  left: 1%;
+  top:89%;
+  left: 6%;
   pointer-events:auto;
 }
 
@@ -146,8 +154,8 @@ img{
 
 #help_btn{
   width: 8%;
-  top:86%;
-  left: 10%;
+  top:89%;
+  left: 15%;
   pointer-events:auto;
 }
 
@@ -181,9 +189,9 @@ img{
 }
 
 #clock img{
-  width: 19%;
-  top:78%;
-  left: 73%;
+  width: 18%;
+  top:82%;
+  left: 78%;
   opacity: 0.8;
 }
 
@@ -521,7 +529,10 @@ iframe{
 
 /*//////ヘルプ///////*/
 #container2{
+  position: absolute;
+  top:0;
   width: 100%;
+  height: 100%;
 }
 
 #help{
@@ -536,6 +547,7 @@ iframe{
 
 #h_bg{
   width: 100%;
+  transform: scale(-1,1);
 }
 
 #help div{
@@ -561,13 +573,13 @@ iframe{
 
 #h_title{
   width: 70px;
-  left: 45%;
-  top: 20%;
+  left: 35%;
+  top: -15%;
 }
 
 #h_hover{
   width: 200px;
   left: 50%;
-  top: 68%;
+  /*top: 68%;*/
   transform: translateX(-40%);
 }
