--- a/girl/style.css
+++ b/girl/style.css
@@ -333,7 +333,7 @@ img{
 
 iframe{
   position: absolute;
-  transform: scaleY(1.3) skewY(-22.5deg);
+  transform: scaleY(1.3) skewY(-22.5deg) scale(-1,1);
   width: 9.5%;
   height: 7%;
   top: 47.3%;
