--- a/style.css
+++ b/style.css
@@ -393,10 +393,10 @@ iframe{
 
 
 /*//////キャラ//////*/
-#character1 {
+/*#character1 {
     width: 8%;
     opacity: 0;
-}
+}*/
 
 #character {
     width: 8%;
