--- a/girl/style.css
+++ b/girl/style.css
@@ -398,10 +398,10 @@ iframe{
 }
 
 /*//////キャラ//////*/
-#character1 {
+/*#character1 {
     width: 8%;
     opacity: 0;
-}
+}*/
 
 #character {
     width: 8%;
